--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,11 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Environment variables
+.env
+.env.local
+
+# Environment variables
+.env
+.env.local
